--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 /aitextgen
-webapp/static/train_text/gpt-2.7z
-webapp/static/train_text/Answers.csv
-webapp/static/train_text/Answers.7z
+/trained_model
